--- a/alt.html
+++ b/alt.html
@@ -14,10 +14,10 @@
       <article class="article article--main">
         <div class="article__content">
           <span class="label">Análisis</span>
-          <h2 class="article__title article__title--large">Lorem ipsum dolor sit amet consectetur. Tellus accumsan.</h2>
-          <p class="article__excerpt">Lorem ipsum dolor sit amet consectetur. Bibendum vitae at cras accumsan dictumst. Elit lorem interdum viverra sit lectus lacus lectus mauris ut.</p>
+          <h2 class="article__title article__title--large">La AIReF alerta de una falta de control de las bajas médicas y reclama reforzar su seguimiento</h2>
+          <p class="article__excerpt">La AIReF advierte del aumento de las bajas médicas y reclama más control y seguimiento para contener el gasto público.</p>
           <div class="article__meta">
-            <span class="author">nombre apellidos</span>
+            <span class="author">Javier Jorrín</span>
             <span class="separator"></span>
             <span class="comments">
               <svg class="icon" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -43,10 +43,10 @@
       <!-- Sidebar Articles (compact, no excerpt) -->
       <aside class="sidebar">
         <article class="article article--compact">
-          <h3 class="article__title">Lorem ipsum dolor sit amet consectetur. Tellus accumsan.</h3>
-          <p class="article__excerpt article__excerpt--short">Lorem ipsum dolor sit amet consectetur. Bibendum vitae at cras accumsan dictumst. Elit lorem</p>
+          <h3 class="article__title">Las ausencias al puesto de trabajo por cargas familiares se duplican</h3>
+          <p class="article__excerpt article__excerpt--short">Las ausencias laborales por conciliación familiar se han duplicado en la última década, según datos oficiales.</p>
           <div class="article__meta">
-            <span class="author">nombre apellidos</span>
+            <span class="author">Cristina Dolz</span>
             <span class="separator"></span>
             <span class="comments">
               <svg class="icon" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -60,9 +60,9 @@
         </article>
 
         <article class="article article--compact">
-          <h3 class="article__title">Lorem ipsum dolor sit amet consectetur. Tellus accumsan.</h3>
+          <h3 class="article__title">Una tarde con Silvia Orriols en el Empordà</h3>
           <div class="article__meta">
-            <span class="author">nombre apellidos</span>
+            <span class="author">Josep Martí Blanch</span>
             <span class="separator"></span>
             <span class="comments">
               <svg class="icon" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -76,9 +76,9 @@
         </article>
 
         <article class="article article--compact">
-          <h3 class="article__title">Lorem ipsum dolor sit amet consectetur. Tellus accumsan.</h3>
+          <h3 class="article__title">El presidente de Renfe cesa a una de sus directoras generales históricas en plena crisis interna</h3>
           <div class="article__meta">
-            <span class="author">nombre apellidos</span>
+            <span class="author">Alberto Sanz</span>
             <span class="separator"></span>
             <span class="comments">
               <svg class="icon" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -102,10 +102,10 @@
         <div class="gran-analisis-content">
           <div class="gran-analisis-articles">
             <article class="article article--text-only">
-              <h2 class="article__title article__title--h3">Lorem ipsum dolor sit amet consectetur. Tellus accumsan.</h2>
-              <p class="article__excerpt">Lorem ipsum dolor sit amet consectetur. Bibendum vitae at cras accumsan dictumst. Elit lorem interdum viverra sit lectus lacus lectus mauris ut.</p>
+              <h2 class="article__title article__title--h3">Caso Begoña: la UCO valora el perjuicio económico del ‘software’ a la Complutense</h2>
+              <p class="article__excerpt">La Guardia Civil analiza el impacto económico para la Complutense del desarrollo de un software bajo sospecha.</p>
               <div class="article__meta">
-                <span class="author">nombre apellidos</span>
+                <span class="author">Alejandro Requeijo</span>
                 <span class="separator"></span>
                 <span class="comments">
                   <svg class="icon" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -120,10 +120,10 @@
             </article>
 
             <article class="article article--text-only">
-              <h2 class="article__title">Lorem ipsum dolor sit amet consectetur. Tellus accumsan.</h2>
-              <p class="article__excerpt">Lorem ipsum dolor sit amet consectetur. Bibendum vitae at cras accumsan dictumst. Elit lorem interdum viverra sit lectus lacus lectus mauris ut.</p>
+              <h2 class="article__title">El Parlamento arremete contra el Tribunal de Cuentas por desobediencia</h2>
+              <p class="article__excerpt">La Cámara acusa al Tribunal de Cuentas de incumplir sus mandatos y eleva el choque institucional.</p>
               <div class="article__meta">
-                <span class="author">nombre apellidos</span>
+                <span class="author">Juan Fernández-Miranda</span>
                 <span class="separator"></span>
                 <span class="comments">
                   <svg class="icon" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -153,8 +153,8 @@
             <div class="firma__avatar"></div>
             <div class="firma__content">
               <span class="label label--exclusive">EC Exclusivo</span>
-              <h3 class="firma__title">Lorem ipsum dolor sit amet</h3>
-              <span class="author">nombre apellidos</span>
+              <h3 class="firma__title">Prohibir las redes a menores de 16: una medida política que no servirá</h3>
+              <span class="author">Manuel Ángel Méndez</span>
             </div>
           </article>
 
@@ -162,8 +162,8 @@
             <div class="firma__avatar"></div>
             <div class="firma__content">
               <span class="label label--exclusive">EC Exclusivo</span>
-              <h3 class="firma__title">Lorem ipsum dolor sit amet</h3>
-              <span class="author">nombre apellidos</span>
+              <h3 class="firma__title">…Y Musk descubrió a Sánchez: lo que se le puede venir a España</h3>
+              <span class="author">A. Alamillos / M. A. Méndez</span>
             </div>
           </article>
 
@@ -171,8 +171,8 @@
             <div class="firma__avatar"></div>
             <div class="firma__content">
               <span class="label label--exclusive">EC Exclusivo</span>
-              <h3 class="firma__title">Lorem ipsum dolor sit amet</h3>
-              <span class="author">nombre apellidos</span>
+              <h3 class="firma__title">El riesgo de prohibir las redes sociales a los menores</h3>
+              <span class="author">Marta García Aller</span>
             </div>
           </article>
 
@@ -180,7 +180,7 @@
             <div class="firma__avatar"></div>
             <div class="firma__content">
               <span class="label label--exclusive">EC Exclusivo</span>
-              <h3 class="firma__title">Lorem ipsum dolor sit amet</h3>
+              <h3 class="firma__title">Broncano renueva por dos temporadas con RTVE con una suculenta subida de sueldo</h3>
               <span class="author">nombre apellidos</span>
             </div>
           </article>
@@ -197,10 +197,10 @@
         </div>
         <div class="article__content">
           <span class="label">Análisis</span>
-          <h2 class="article__title article__title--h3">Lorem ipsum dolor sit amet consectetur. Tellus accumsan.</h2>
-          <p class="article__excerpt">Lorem ipsum dolor sit amet consectetur. Bibendum vitae at cras accumsan dictumst. Elit lorem interdum viverra sit lectus lacus lectus mauris ut.</p>
+          <h2 class="article__title article__title--h3">🔴 Directo · El Ibex lucha por lograr otro récord histórico pese al golpe de Santander (−3,5%)</h2>
+          <p class="article__excerpt">El Ibex busca un nuevo máximo histórico en una sesión marcada por las caídas de Santander.</p>
           <div class="article__meta">
-            <span class="author">nombre apellidos</span>
+            <span class="author">Carlos Rodríguez / Lucía Puerto / Lucía Arechavala</span>
             <span class="separator"></span>
             <span class="comments">
               <svg class="icon" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -218,10 +218,10 @@
       <div class="row row--two-col">
         <article class="article article--bottom">
           <span class="label">Análisis</span>
-          <h2 class="article__title">Lorem ipsum dolor sit amet consectetur. Tellus accumsan.</h2>
-          <p class="article__excerpt">Lorem ipsum dolor sit amet consectetur. Bibendum vitae at cras accumsan dictumst. Elit lorem interdum viverra sit lectus lacus lectus mauris ut.</p>
+          <h2 class="article__title">La entidad registra un beneficio récord de 14.101 M en 2025 y compra Webster Bank</h2>
+          <p class="article__excerpt">El banco logra ganancias históricas en 2025 y anuncia la compra de Webster Bank en EE UU.</p>
           <div class="article__meta">
-            <span class="author">nombre apellidos</span>
+            <span class="author">Ó. Giménez</span>
             <span class="separator"></span>
             <span class="comments">
               <svg class="icon" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -237,10 +237,10 @@
 
         <article class="article article--bottom">
           <span class="label">Análisis</span>
-          <h2 class="article__title">Lorem ipsum dolor sit amet consectetur. Tellus accumsan.</h2>
-          <p class="article__excerpt">Lorem ipsum dolor sit amet consectetur. Bibendum vitae at cras accumsan dictumst. Elit lorem interdum viverra sit lectus lacus lectus mauris ut.</p>
+          <h2 class="article__title">Blackstone y EQT cierran la compra de Urbaser a Platinum por 3.500 M</h2>
+          <p class="article__excerpt">Blackstone y EQT acuerdan la compra de Urbaser por 3.500 millones de euros.</p>
           <div class="article__meta">
-            <span class="author">nombre apellidos</span>
+            <span class="author">Agustín Marco</span>
             <span class="separator"></span>
             <span class="comments">
               <svg class="icon" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
